--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   "publishConfig": {
     "access": "public"
   },
+  "resolutions": {
+    "postcss": "8.4.5"
+  },
   "scripts": {
     "clean": "shx rm -rf .next",
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "yarn clean && next build",
     "start": "next start",
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@solana/spl-token": "^0.1.8",
@@ -30,18 +36,27 @@
     "@solana/wallet-adapter-react": "^0.15.1",
     "@solana/wallet-adapter-react-ui": "^0.9.1",
     "@solana/wallet-adapter-wallets": "^0.14.1",
+    "@storybook/addon-postcss": "^2.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@storybook/addon-actions": "^6.5.0-alpha.18",
+    "@storybook/addon-essentials": "^6.5.0-alpha.18",
+    "@storybook/addon-links": "^6.5.0-alpha.18",
+    "@storybook/react": "^6.5.0-alpha.18",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
     "eslint-config-next": "^12.0.7",
+    "eslint-plugin-storybook": "^0.5.5",
+    "postcss": "^8.4.5",
     "shx": "^0.3.3",
+    "tailwindcss": "^3.0.15",
     "typescript": "~4.4.4"
   }
 }
