--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@solana/spl-token": "^0.1.8",
@@ -38,6 +39,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.1",
     "@solana/wallet-adapter-wallets": "^0.14.1",
     "@storybook/addon-postcss": "^2.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -56,6 +59,7 @@
     "eslint-config-next": "^12.0.7",
     "eslint-plugin-storybook": "^0.5.5",
     "postcss": "^8.4.5",
+    "react-test-renderer": "^17.0.2",
     "shx": "^0.3.3",
     "tailwindcss": "^3.0.15",
     "typescript": "~4.4.4"
